# GoIT_PyWEB_hm10

./: README.md  example.config.ini  main.py  pyproject.toml
redis/: _redis.py
src/: connect.py  models.py  repo.py
